// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccordionExpandableItem renders correctly 1`] = `
<div
  className="box paddingX6 paddingY6"
>
  <div
    className="Flex rowGap0 columnGap6 xsDirectionColumn"
  >
    <div
      className="FlexItem"
    >
      <div
        aria-controls="uniqueTestID"
        aria-disabled={false}
        aria-expanded={false}
        aria-label="click to expand"
        className="tapTransition rounding0 accessibilityOutline fullWidth pointer"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex={0}
      >
        <div
          className="Flex rowGap0 columnGap0 xsDirectionRow"
        >
          <div
            className="box flexGrow marginEnd6 xsDisplayFlex xsItemsBaseline"
          >
            <div
              className="box xsCol12"
            >
              <div
                className="Flex rowGap3 columnGap0 xsDirectionRow xsItemsCenter"
              >
                <div
                  className="FlexItem"
                  style={
                    Object {
                      "minWidth": 0,
                    }
                  }
                >
                  <div
                    className="default alignStart breakWord lineClamp Text fontSize300 fontWeightSemiBold"
                    style={
                      Object {
                        "WebkitLineClamp": 1,
                      }
                    }
                    title="test title"
                  >
                    test title
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AccordionExpandableItem renders correctly with badge 1`] = `
<div
  className="box paddingX6 paddingY6"
>
  <div
    className="Flex rowGap0 columnGap6 xsDirectionColumn"
  >
    <div
      className="FlexItem"
    >
      <div
        aria-controls="uniqueTestID"
        aria-disabled={false}
        aria-expanded={false}
        aria-label="click to expand"
        className="tapTransition rounding0 accessibilityOutline fullWidth pointer"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex={0}
      >
        <div
          className="Flex rowGap0 columnGap0 xsDirectionRow"
        >
          <div
            className="box flexGrow marginEnd6 xsDisplayFlex xsItemsBaseline"
          >
            <div
              className="box xsCol12"
            >
              <div
                className="Flex rowGap3 columnGap0 xsDirectionRow xsItemsCenter"
              >
                <div
                  className="FlexItem"
                  style={
                    Object {
                      "minWidth": 0,
                    }
                  }
                >
                  <div
                    className="default alignStart breakWord lineClamp Text fontSize300 fontWeightSemiBold"
                    style={
                      Object {
                        "WebkitLineClamp": 1,
                      }
                    }
                    title="test title"
                  >
                    test title
                  </div>
                </div>
                <div
                  className="FlexItem"
                  style={
                    Object {
                      "minWidth": 0,
                    }
                  }
                >
                  <div
                    className="box relative"
                    style={
                      Object {
                        "top": "1px",
                      }
                    }
                  >
                    <div
                      className="badge info middle"
                    >
                      <div
                        className="Flex rowGap1 columnGap0 xsDirectionRow xsItemsCenter"
                      >
                        <div
                          className="FlexItem"
                        >
                          <div
                            className="box contentCenter xsDisplayFlex"
                          >
                            <span
                              className="inverse alignStart breakWord Text fontWeightSemiBold fontSize200"
                            >
                              Try it out!
                            </span>
                          </div>
                        </div>
                      </div>
                       
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AccordionExpandableItem renders correctly with children 1`] = `
<div
  className="box paddingX6 paddingY6"
>
  <div
    className="Flex rowGap0 columnGap6 xsDirectionColumn"
  >
    <div
      className="FlexItem"
    >
      <div
        aria-controls="uniqueTestID"
        aria-disabled={false}
        aria-expanded={false}
        aria-label="click to expand"
        className="tapTransition rounding0 accessibilityOutline fullWidth pointer"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex={0}
      >
        <div
          className="Flex rowGap0 columnGap0 xsDirectionRow"
        >
          <div
            className="box flexGrow marginEnd6 xsDisplayFlex xsItemsBaseline"
          >
            <div
              className="box xsCol12"
            >
              <div
                className="Flex rowGap3 columnGap0 xsDirectionRow xsItemsCenter"
              >
                <div
                  className="FlexItem"
                  style={
                    Object {
                      "minWidth": 0,
                    }
                  }
                >
                  <div
                    className="default alignStart breakWord lineClamp Text fontSize300 fontWeightSemiBold"
                    style={
                      Object {
                        "WebkitLineClamp": 1,
                      }
                    }
                    title="test title"
                  >
                    test title
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AccordionExpandableItem renders correctly with error 1`] = `
<div
  className="box paddingX6 paddingY6"
>
  <div
    className="Flex rowGap0 columnGap6 xsDirectionColumn"
  >
    <div
      className="FlexItem"
    >
      <div
        aria-controls="uniqueTestID"
        aria-disabled={false}
        aria-expanded={false}
        aria-label="click to expand"
        className="tapTransition rounding0 accessibilityOutline fullWidth pointer"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex={0}
      >
        <div
          className="Flex rowGap0 columnGap0 xsDirectionRow"
        >
          <div
            className="box flexGrow marginEnd6 xsDisplayFlex xsItemsBaseline"
          >
            <div
              className="box xsCol12"
            >
              <div
                className="Flex rowGap3 columnGap0 xsDirectionRow xsItemsCenter"
              >
                <div
                  className="FlexItem"
                  style={
                    Object {
                      "minWidth": 0,
                    }
                  }
                >
                  <svg
                    aria-hidden={null}
                    aria-label="there is an error"
                    className="error icon iconBlock"
                    height={16}
                    role="img"
                    viewBox="0 0 24 24"
                    width={16}
                  >
                    <path
                      d="test-file-stub"
                    />
                  </svg>
                </div>
                <div
                  className="FlexItem"
                  style={
                    Object {
                      "minWidth": 0,
                    }
                  }
                >
                  <div
                    className="error alignStart breakWord lineClamp Text fontSize300 fontWeightSemiBold"
                    style={
                      Object {
                        "WebkitLineClamp": 1,
                      }
                    }
                    title="test title"
                  >
                    test title
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AccordionExpandableItem renders correctly with icon 1`] = `
<div
  className="box paddingX6 paddingY6"
>
  <div
    className="Flex rowGap0 columnGap6 xsDirectionColumn"
  >
    <div
      className="FlexItem"
    >
      <div
        aria-controls="uniqueTestID"
        aria-disabled={false}
        aria-expanded={false}
        aria-label="click to expand"
        className="tapTransition rounding0 accessibilityOutline fullWidth pointer"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex={0}
      >
        <div
          className="Flex rowGap0 columnGap0 xsDirectionRow"
        >
          <div
            className="box flexGrow marginEnd6 xsDisplayFlex xsItemsBaseline"
          >
            <div
              className="box xsCol12"
            >
              <div
                className="Flex rowGap3 columnGap0 xsDirectionRow xsItemsCenter"
              >
                <div
                  className="FlexItem"
                  style={
                    Object {
                      "minWidth": 0,
                    }
                  }
                >
                  <svg
                    aria-hidden={null}
                    aria-label="lock icon label"
                    className="default icon iconBlock"
                    height={16}
                    role="img"
                    viewBox="0 0 24 24"
                    width={16}
                  >
                    <path
                      d="test-file-stub"
                    />
                  </svg>
                </div>
                <div
                  className="FlexItem"
                  style={
                    Object {
                      "minWidth": 0,
                    }
                  }
                >
                  <div
                    className="default alignStart breakWord lineClamp Text fontSize300 fontWeightSemiBold"
                    style={
                      Object {
                        "WebkitLineClamp": 1,
                      }
                    }
                    title="test title"
                  >
                    test title
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AccordionExpandableItem renders correctly with icon button 1`] = `
<div
  className="box paddingX6 paddingY6"
>
  <div
    className="Flex rowGap0 columnGap6 xsDirectionColumn"
  >
    <div
      className="FlexItem"
    >
      <div
        aria-controls="uniqueTestID"
        aria-disabled={false}
        aria-expanded={false}
        aria-label="click to expand"
        className="tapTransition rounding0 accessibilityOutline fullWidth pointer"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex={0}
      >
        <div
          className="Flex rowGap0 columnGap0 xsDirectionRow"
        >
          <div
            className="box flexGrow marginEnd6 xsDisplayFlex xsItemsBaseline"
          >
            <div
              className="box xsCol12"
            >
              <div
                className="Flex rowGap3 columnGap0 xsDirectionRow xsItemsCenter"
              >
                <div
                  className="FlexItem"
                  style={
                    Object {
                      "minWidth": 0,
                    }
                  }
                >
                  <div
                    className="default alignStart breakWord lineClamp Text fontSize300 fontWeightSemiBold"
                    style={
                      Object {
                        "WebkitLineClamp": 1,
                      }
                    }
                    title="test title"
                  >
                    test title
                  </div>
                </div>
                <div
                  className="FlexItem"
                  style={
                    Object {
                      "minWidth": 0,
                    }
                  }
                >
                  <button
                    aria-label="Get help"
                    className="parentButton"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseDown={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchCancel={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    tabIndex={0}
                    type="button"
                  >
                    <div
                      className="button tapTransition enabled"
                    >
                      <div
                        className="pog lightGray"
                        style={
                          Object {
                            "height": 24,
                            "width": 24,
                          }
                        }
                      >
                        <svg
                          aria-hidden={true}
                          aria-label=""
                          className="default icon iconBlock"
                          height={12}
                          role="img"
                          viewBox="0 0 24 24"
                          width={12}
                        >
                          <path
                            d="test-file-stub"
                          />
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AccordionExpandableItem renders correctly with summary 1`] = `
<div
  className="box paddingX6 paddingY6"
>
  <div
    className="Flex rowGap0 columnGap6 xsDirectionColumn"
  >
    <div
      className="FlexItem"
    >
      <div
        aria-controls="uniqueTestID"
        aria-disabled={false}
        aria-expanded={false}
        aria-label="click to expand"
        className="tapTransition rounding0 accessibilityOutline fullWidth pointer"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex={0}
      >
        <div
          className="Flex rowGap0 columnGap0 xsDirectionRow"
        >
          <div
            className="box flexGrow marginEnd6 xsDisplayFlex xsItemsBaseline"
          >
            <div
              className="box xsCol6"
            >
              <div
                className="Flex rowGap3 columnGap0 xsDirectionRow xsItemsCenter"
              >
                <div
                  className="FlexItem"
                  style={
                    Object {
                      "minWidth": 0,
                    }
                  }
                >
                  <div
                    className="default alignStart breakWord lineClamp Text fontSize300 fontWeightSemiBold"
                    style={
                      Object {
                        "WebkitLineClamp": 1,
                      }
                    }
                    title="test title"
                  >
                    test title
                  </div>
                </div>
              </div>
            </div>
            <div
              className="box marginStart6 xsCol6"
            >
              <div
                className="Flex rowGap0 columnGap2 xsDirectionColumn"
              >
                <div
                  className="FlexItem"
                >
                  <div
                    className="default alignStart breakWord lineClamp Text fontSize200 fontWeightNormal"
                    style={
                      Object {
                        "WebkitLineClamp": 1,
                      }
                    }
                    title="summary1"
                  >
                    summary1
                  </div>
                </div>
                <div
                  className="FlexItem"
                >
                  <div
                    className="default alignStart breakWord lineClamp Text fontSize200 fontWeightNormal"
                    style={
                      Object {
                        "WebkitLineClamp": 1,
                      }
                    }
                    title="summary2"
                  >
                    summary2
                  </div>
                </div>
                <div
                  className="FlexItem"
                >
                  <div
                    className="default alignStart breakWord lineClamp Text fontSize200 fontWeightNormal"
                    style={
                      Object {
                        "WebkitLineClamp": 1,
                      }
                    }
                    title="summary3"
                  >
                    summary3
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AccordionExpandableItem renders correctly with when expanded 1`] = `
<div
  className="box paddingX6 paddingY6"
>
  <div
    className="Flex rowGap0 columnGap6 xsDirectionColumn"
  >
    <div
      className="FlexItem"
    >
      <div
        aria-controls="uniqueTestID"
        aria-disabled={false}
        aria-expanded={true}
        aria-label="click to collapse"
        className="tapTransition rounding0 accessibilityOutline fullWidth pointer"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex={0}
      >
        <div
          className="Flex rowGap0 columnGap0 xsDirectionRow"
        >
          <div
            className="box flexGrow marginEnd6 xsDisplayFlex xsItemsBaseline"
          >
            <div
              className="box xsCol12"
            >
              <div
                className="Flex rowGap3 columnGap0 xsDirectionRow xsItemsCenter"
              >
                <div
                  className="FlexItem"
                  style={
                    Object {
                      "minWidth": 0,
                    }
                  }
                >
                  <div
                    className="default alignStart breakWord lineClamp Text fontSize300 fontWeightSemiBold"
                    style={
                      Object {
                        "WebkitLineClamp": 1,
                      }
                    }
                    title="test title"
                  >
                    test title
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="box paddingX1 paddingY1 xsDisplayFlex xsItemsCenter"
            id="uniqueTestID"
            style={
              Object {
                "maxHeight": 24,
              }
            }
          >
            <svg
              aria-hidden={null}
              aria-label="click to collapse"
              className="default icon iconBlock"
              height="12"
              role="img"
              viewBox="0 0 24 24"
              width="12"
            >
              <path
                d="test-file-stub"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      className="FlexItem"
    >
      <div>
        test children
      </div>
    </div>
  </div>
</div>
`;
